--- a/blogpost.html
+++ b/blogpost.html
@@ -1,17 +1,28 @@
 <html>
-    <head>
-        <title>El titulo del post</title>
-        <link rel="stylesheet" href="css/estilos.css" />
-    </head>
-    <body>
-        <div id="container">
-            <div id="cabecera">
-                Cabecera
-            </div>
-            <div id="post">
-                <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
-            </div>
+
+<head>
+    <title>El titulo del post</title>
+    <link rel="stylesheet" href="css/estilos.css" />
+</head>
+
+<body>
+    <div id="container">
+        <div id="cabecera">
+            Cabecera
         </div>
-    </body>
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas
+            </p>
+            <p>
+                Esta es la historia de Freddy Vega
+
+                Freddy Vega tiene 32 años y nació en Colombia
+
+                Mañana nos enfocaremos en su vida laboral
+            </p>
+        </div>
+    </div>
+</body>
+
 </html>
