color de fondo , logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,13 +1,14 @@
 <html>
     <head>
-        <title>Bienvenido a hyper blog</title>
+        <title>Bienvenido a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
-                <span id="tagline">Tu blog maestro</span>
+                <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
@@ -16,20 +17,5 @@
                 <p>Suscribete y dale like</p>
             </div>
         </div>
-        <div id="post">
-            <h1>Este es el título atractivo e interesante del post</h1>
-            <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas
-            </p>
-            <p>
-                Esta es la historia de Freddy Vega
-
-                Freddy Vega tiene 32 años y nació en Colombia
-
-                Mañana nos enfocaremos en su vida laboral
-            </p>
-            <p>sucribite y dale like</p>
-        </div>
-    </div>
-</body>
-
+    </body>
 </html>
