--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
                 <p>Suscribete y dale like</p>
             </div>
         </div>
+        <div id="footer">
+            en platsi
+        </div>
     </body>
 </html>
